@@ -535,6 +535,8 @@ define function, begin
 524,getdoordestinationmap,1,0    #map number of given door's exit
 525,doorexists,1,0               #returns true if the given door exists
 526,getattackcaption,2,0,0       #puts an attack's caption in a string (string id, attack id+1 / attack .hsi constant)
+527,getrectfuzziness,1,0         #get rect fuzz percentange
+528,setrectfuzziness,2,0,50      #set rect fuzz percentange
 end
 
 #--------------------------------------------------------------------------
